  - 탈의실 번호를 현황판에서 보여줌

v0.4.3    Thu, 19 Nov 2015 12:48:28 +0900
  - 수선화면의 현황판을 남자/여자 아이콘으로 표시

v0.4.2    Tue, 17 Nov 2015 13:10:46 +0900
  - 수선화면 현황판의 스타일 조정

v0.4.1    Tue, 17 Nov 2015 12:57:58 +0900
  - 수선완료 상태 변경 버그 수정

v0.4.0    Wed, 11 Nov 2015 19:32:18 +0900
  - 22:00 예약 사용자는 online 대여자이므로 dashboard 에서 skip
  - Increase font size pants length choice
  - pants length 의 단위를 2에서 1로 사용
  - sender 'brain' event 추가
  - 수선완료 상태를 실시간으로 공유

v0.3.11    Wed, 11 Nov 2015 15:27:57 +0900
  - 수선화면에서 reload 를 줄이고 dashboard 를 실시간으로 update
  - 포장완료 상태추가

v0.3.10    Mon, 09 Nov 2015 19:23:07 +0900
  - Show order's pants in repair
  - 의류준비에 목둘레 추가
  - 수선에 대기자 현황판 추가
  - 수선에 대여목적을 표시
  - 의류준비 -> 수선/포장 일때 bestfit 입력유도
  - 의류준비에 바지길이 표시
  - 의류준비에서 바지길이를 버튼으로 수정
  - 의류준비에 바지길이 제거
  - 수선에서 바지길이를 수정 가능하도록 변경
  - 수선/포장으로 넘어갈때에 바지길이를 입력할 수 있도록 변경

v0.3.9    Mon, 19 Oct 2015 18:23:54 +0900
  - Add route 'GET /repair'
  - /repair 에서 10분마다 알람
  - Publish with extra data when sender is order

v0.3.8    Wed, 09 Sep 2015 17:44:07 +0900
  - #bestfit-alert .bestfit style 강조

v0.3.7    Tue, 08 Sep 2015 15:19:36 +0900
  - bestfit 입력할때 현재의 상태를 표시

v0.3.6    Fri Jul  3 12:44:44 2015 KST
  - Show today and a week bestfit count

v0.3.5    Fri Jun 26 12:20:28 2015 KST
  - 의류준비에서 수선으로 변경했을때 치수측정으로 상태가 바뀌는 버그 수정

v0.3.4    Tue Jun 23 01:41:25 2015 KST
  - Toggle bestfit by clicking user name in preparation
  - Show wearon date in preparation

v0.3.3    Thu Jun 18 09:07:57 2015 KST
  - Documentation routing info to each controller
  - Add 포장, 수선 context menu in preparation
  - 어울림 => Best-Fit 문자 수정

v0.3.2    Mon Jun  8 16:31:12 2015 KST
  - active 상태가 오락가락하는 버그 수정(https://github.com/opencloset/monitor/issues/15)
  - save cookie file after success authentication

v0.3.1    Fri Jun  5 13:40:42 2015 KST
  - Add style for context menu
  - 대여하려는 의류 카테고리의 순서를 정렬

v0.3.0    Thu Jun  4 18:02:20 2015 KST
  - 의류준비에 수선중인 사용자 목록을 표시
  - 의류카테고리를 정렬해서 나타냄
  - 수선, 포장으로 변경할때에 Bestfit 에 대한 입력을 요구
