@@ -15,6 +15,7 @@ sub register {
     $app->helper( redis          => \&redis );
     $app->helper( previous_order => \&previous_order );
     $app->helper( history        => \&history );
+    $app->helper( recent_orders  => \&recent_orders );
 }
 
 sub order_flatten {
@@ -113,6 +114,17 @@ sub history {
     return $self->app->SQLite->resultset('History')->search( $cond, $attr );
 }
 
+sub recent_orders {
+    my ( $self, $order ) = @_;
+    return unless $order;
+
+    return $order->user->search_related(
+        'orders',
+        { -not     => { id    => $order->id } },
+        { order_by => { -desc => 'id' } }
+    );
+}
+
 1;
 
 =pod
@@ -137,5 +149,14 @@ OpenCloset::Plugin::Helpers - provide helpers for opencloset
         my $required = $self->param('something');
         return $self->error(400, 'oops wat the..') unless $required;
     } => 'foo';
+
+=head2 recent_orders
+
+Arguments: $order
+Return: $resultset (scalar context) | @result_objs (list context)
+
+    my $orders = $c->recent_order($order);
+
+사용자의 C<$order> 를 제외한 최근 주문서를 찾습니다
 
 =cut
