@@ -1,4 +1,5 @@
   - 탈의실 번호를 현황판에서 보여줌
+  - Add helper `recent_orders`
 
 v0.4.3    Thu, 19 Nov 2015 12:48:28 +0900
   - 수선화면의 현황판을 남자/여자 아이콘으로 표시
